# charity-lang

./: README.md
doc/: README.md  background.md  charity.bib  cockett.md  contact.md  examples.md  faq.md  hensel.md  (+12 more)
src/v1/: BUGS  COPYING  ChangeLog  INSTALL  Makefile.in  PRELUDE.ch  TODO  charity.spec  configure  configure.in
src/v1/Compile/: Makefile.in  compile.c  decompile.c  emit.c
src/v1/General/: Makefile.in  commands.c  ioChar.c  lib.c  main.c  pmem.c
src/v1/Include/: codetab.h  commands.h  compile.h  coreTL.h  ctTranslate.h  decompile.h  emit.h  gc.h  ioChar.h  lib.h  list.h  listParse.h  machine.h  machine_private.h  parse.h  pm.h  pmem.h  symtab.h  typecheck.h  types.h  variance.h  y.tab.h
src/v1/Lists/: Makefile.in  list.c
src/v1/Machine/: Makefile.in  gc.c  machine.c
src/v1/ParseLex/: Makefile.in  lex.yy.c  listParse.c  parse.c  printParse.c  y.tab.c
src/v1/Pm/: Makefile.in  pm.c  pmLib.c  pmPrivate.h  pmTransExprs.c  pmTransPhrases.c
src/v1/Symtab/: Makefile.in  addSymtab.c  codetab.c  combPrint.c  lookupSymtab.c  miscSymtab.c  symtab.c  symtabI.h
src/v1/Test/calc/: calc.ch  syntax-trees.ch
src/v1/Test/ill/: exp.ch  miscHO.ch
src/v1/Test/pegs/: basics.ch  lazy-lists.ch  pegs.ch  search.ch
src/v1/Test/sieve/: INT.ch  UTILS.ch  old.ch  primes.r.ch
src/v1/Test/suite/: ass2.ch  ass2test.ch  suite_FO.ch  suite_HO.ch  test_stack.ch  twice.ch
src/v1/Translate/: Makefile.in  ctTranslate.c
src/v1/TypeCheck/: Makefile.in  tc_convert.c  tc_list.c  tc_main.c  tc_subst.c  tc_unify.c  typecheckI.h
src/v1/Variance/: Makefile.in  variance.c
(+193 files in other folders)
